complete sidebar UI

--- a/src/sass/layouts/_main-content.scss
+++ b/src/sass/layouts/_main-content.scss
@@ -1,6 +1,6 @@
 .main-content{
     width: 100%;
-    padding: 50px 0;
+    padding: 100px 0 50px 0;
     overflow: {
         y: auto;
         x: hidden;
