--- a/src/sass/components/_sidebar.scss
+++ b/src/sass/components/_sidebar.scss
@@ -2,8 +2,7 @@
     min-height: 100vh;
     height: 100%;
     overflow-y: auto;
-    padding: 30px;
-    min-width: 200px;
+    width: 0;
     box-sizing: border-box;
     position: relative;
     z-index: 100;
@@ -11,5 +10,47 @@
     background: $dark-blue;
     box-shadow: 2px 3px 5px rgba(0,0,0,0.3);
     margin-top: 64px;
-    margin-right: 50px;
+    padding-top: 15px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    transform: translateX(-100%);
+    transform-origin: left;
+    & > *{
+        transition: all 0.3s;
+        opacity: 0;
+    }
+    &.open{
+        width: 250px;
+        transform: translateX(0);
+        * {
+            opacity: 1;
+        }
+    }    
+    .sub-list{
+        margin-top: 15px;
+        li{
+            line-height: 2.5rem;
+            padding: 0 10px;
+            transition: background 0.3s ease;
+            &:hover{
+                background-color: #162D40;
+                a{
+                    color: $blue;
+                }
+            }
+            a{
+                display: flex;
+                align-items: center;
+                width: 100%;
+                font-size: 1rem;
+                transition: color 0.3s ease;
+                svg{
+                    font-size: 1.2rem;
+                    margin-right: 5px;
+                }
+            }
+        }
+    }
 }
+
