add request studio from Sidebar to server

--- a/src/index.scss
+++ b/src/index.scss
@@ -9,4 +9,5 @@
 // TODO: components
 @import "./sass/components/_sidebar";
 @import "./sass/components/_line";
+@import "./sass/components/_sections";
 
