add model section components

--- a/src/index.scss
+++ b/src/index.scss
@@ -10,4 +10,5 @@
 @import "./sass/components/_sidebar";
 @import "./sass/components/_line";
 @import "./sass/components/_sections";
+@import "./sass/components/_model";
 
