--- a/src/sass/components/_sections.scss
+++ b/src/sass/components/_sections.scss
@@ -5,6 +5,7 @@
         justify-content: space-between;
         position: relative;
         padding-bottom: 5px;
+        margin-bottom: 30px;
         &::before{
             content: '';
             position: absolute;
