add modal save movie to db

--- a/src/index.scss
+++ b/src/index.scss
@@ -16,3 +16,4 @@
 @import "./sass/components/_movies";
 @import "./sass/components/_buttons";
 @import "./sass/components/_modal";
+@import "./sass/components/_dropbox";
