add UI for tags page

--- a/src/index.scss
+++ b/src/index.scss
@@ -7,6 +7,7 @@
 
 // TODO: layous
 @import "./sass/layouts/_main-content";
+@import "./sass/layouts/_page";
 
 // TODO: components
 @import "./sass/components/_sidebar";
@@ -17,3 +18,4 @@
 @import "./sass/components/_buttons";
 @import "./sass/components/_modal";
 @import "./sass/components/_dropbox";
+@import "./sass/components/_tags";
