--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -5,3 +5,19 @@
     color: currentColor;
     border: 0;
 }
+
+.back-btn{
+    background-color: transparent;
+    color: $white;
+    display: inline-block;
+    padding: 15px;
+    font-size: 0.8rem;
+    margin: 15px;
+    margin-left: 0;
+    transition: background 0.3s ease,color 0.3s ease;
+    border-radius: 50%;
+}
+
+.back-btn:hover{
+    background: #162D40;
+}
