--- a/src/sass/components/_sections.scss
+++ b/src/sass/components/_sections.scss
@@ -1,5 +1,6 @@
 .section-container{
     margin-top: 45px;
+    margin-bottom: 30px;
     .title-wrapper{
         display: flex;
         justify-content: space-between;
