--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -12,10 +12,9 @@
     display: inline-block;
     padding: 15px;
     font-size: 0.8rem;
-    margin: 15px;
-    margin-left: 0;
     transition: background 0.3s ease,color 0.3s ease;
     border-radius: 50%;
+    margin-right: 10px;
 }
 
 .back-btn:hover{
