--- a/src/sass/layouts/_page.scss
+++ b/src/sass/layouts/_page.scss
@@ -1,9 +1,13 @@
 .page-header{
     display: flex;
     align-items: center;
+    margin-top: 20px;
+    font-size: 1.2rem;
     .page-title{
-        font-size: 1.2rem;
         display: inline-block;
         font-weight: 600;
+    }
+    .interact-area{
+        margin-left: auto;
     }
 }
