complete UI for movie detail page

--- a/src/index.scss
+++ b/src/index.scss
@@ -8,6 +8,7 @@
 // TODO: layous
 @import "./sass/layouts/_main-content";
 @import "./sass/layouts/_page";
+@import "./sass/layouts/_section-detail";
 
 // TODO: components
 @import "./sass/components/_sidebar";
@@ -19,3 +20,4 @@
 @import "./sass/components/_modal";
 @import "./sass/components/_dropbox";
 @import "./sass/components/_tags";
+@import "./sass/components/_input";
