--- a/src/sass/components/_dropbox.scss
+++ b/src/sass/components/_dropbox.scss
@@ -1,6 +1,6 @@
 .dropbox {
     font-size: 1.25rem;
-    background-color: #0B2239;
+    background-color: $light-dark-blue;
     position: relative;
     padding: 40px;
     text-align: center;
