--- a/src/sass/base/_extends.scss
+++ b/src/sass/base/_extends.scss
@@ -37,3 +37,11 @@
         }
     }
 }
+
+%space-between{
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    padding-bottom: 5px;
+    margin-bottom: 30px;
+}
