--- a/src/sass/layouts/_section-detail.scss
+++ b/src/sass/layouts/_section-detail.scss
@@ -2,6 +2,9 @@
     margin-top: 20px;
     .detail-content{
         margin-top: 45px;
+        .wrap-block{
+            margin: 40px 0;
+        }
     }
 }
 
