--- a/src/index.scss
+++ b/src/index.scss
@@ -21,3 +21,4 @@
 @import "./sass/components/_dropbox";
 @import "./sass/components/_tags";
 @import "./sass/components/_input";
+@import "./sass/components/_multi_select";
