--- a/src/sass/components/_multi_select.scss
+++ b/src/sass/components/_multi_select.scss
@@ -64,7 +64,7 @@
             text-overflow: ellipsis;
             white-space: nowrap;
             float: left;
-            max-width: 120px;
+            min-width: 120px;
             margin-right: 10px;
             margin-bottom: 15px;
             .rm-btn{
