--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -15,6 +15,8 @@
     transition: background 0.3s ease,color 0.3s ease;
     border-radius: 50%;
     margin-right: 10px;
+    cursor: pointer;
+    border: 0;
 }
 
 .back-btn:hover{
