create studios page and update api for ModelDetail page

--- a/src/index.scss
+++ b/src/index.scss
@@ -22,3 +22,4 @@
 @import "./sass/components/_tags";
 @import "./sass/components/_input";
 @import "./sass/components/_multi_select";
+@import "./sass/components/_studio";
