--- a/src/sass/base/_extends.scss
+++ b/src/sass/base/_extends.scss
@@ -45,3 +45,18 @@
     padding-bottom: 5px;
     margin-bottom: 30px;
 }
+
+%inline-block{
+    display: inline-block;
+    background: $dark-blue;
+    color: $white;
+    padding: 15px 30px;
+    margin-right: 15px;
+    font-size: 1rem;
+    border-radius: 5px;
+    transition: color 0.3s, background 0.3s;
+    &:hover{
+        color: $blue;
+        background: rgb(6, 19, 34);
+    }
+}
