--- a/src/sass/base/_extends.scss
+++ b/src/sass/base/_extends.scss
@@ -52,6 +52,7 @@
     color: $white;
     padding: 15px 30px;
     margin-right: 15px;
+    margin-bottom: 15px;
     font-size: 1rem;
     border-radius: 5px;
     transition: color 0.3s, background 0.3s;
