complete movies page and filter movies function

--- a/src/index.scss
+++ b/src/index.scss
@@ -23,3 +23,5 @@
 @import "./sass/components/_input";
 @import "./sass/components/_multi_select";
 @import "./sass/components/_studio";
+@import "./sass/components/_pagination";
+@import "./sass/components/_filter";
