new feature: create collection

--- a/src/index.scss
+++ b/src/index.scss
@@ -25,3 +25,4 @@
 @import "./sass/components/_studio";
 @import "./sass/components/_pagination";
 @import "./sass/components/_filter";
+@import "./sass/components/_collection";
